kustomize/apps/syncwatch/envoy/referenceGrant.envoy-gateway-tls.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: envoy-gateway-tls
  namespace: syncwatch
  labels:
    app.kubernetes.io/name: syncwatch
    app.kubernetes.io/part-of: syncwatch
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: envoy-gateway
  to:
  - group: ""
    kind: Secret
    name: syncwatch-tls
