kustomize/apps/syncwatch/envoy/httpRoute.syncwatch.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: syncwatch
  namespace: syncwatch
  labels:
    app.kubernetes.io/name: syncwatch
    app.kubernetes.io/part-of: syncwatch
spec:
  hostnames:
  - CHANGEME
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: ingress-1
    namespace: envoy-gateway
    sectionName: https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: syncwatch
      port: 80
      weight: 1
